--- a/PierresVendorsAndOrders/Views/Home/Index.cshtml
+++ b/PierresVendorsAndOrders/Views/Home/Index.cshtml
@@ -3,7 +3,6 @@
 }
 
     <h1>Pierre's Vendors And Orders</h1>
-    <a href='/albums'>View Vendors</a>
+    <a href='/vendors'>View Vendors</a>
     <br>
-    <a href='/albums/new'>Add a new Vendor</a>
-</html>
+    <a href='/vendors/new'>Add a new Vendor</a>
