--- a/PierresVendorsAndOrders/Views/Shared/_Layout.cshtml
+++ b/PierresVendorsAndOrders/Views/Shared/_Layout.cshtml
@@ -12,6 +12,6 @@
   </head>
   <body>
     @RenderBody()
-    @await Html.PartialAsync("Footer")
+    @await Html.PartialAsync("footer")
   </body>
 </html>
