Fix Show route bug

--- a/PierresVendorsAndOrders/Views/Orders/Index.cshtml
+++ b/PierresVendorsAndOrders/Views/Orders/Index.cshtml
@@ -13,10 +13,10 @@
     <ul>
       @foreach (Order order in Model)
       {
-      <li><a href='/orders/@order.Id'>@order.Product</a></li>
+      <li><a href='/vendors/@Model["vendor"].Id/orders/@order.Id'>@order.Product</a></li>
       }
     </ul>
-    <a href="/orders/new">Add a new product.</a>
+    <a href='/vendors/@Model["vendor"].Id/orders/new'>Add a new product.</a>
 
     <form action="/orders/delete" method="post">
       <button type="submit" name="button">Delete Order List</button>
