--- a/PierresVendorsAndOrders/Views/Orders/Show.cshtml
+++ b/PierresVendorsAndOrders/Views/Orders/Show.cshtml
@@ -2,9 +2,11 @@
   Layout = "_Layout";
 }
 
+@using PierresVendorsAndOrders;
+
     <h1>Vendor Order Details: </h1>
 
     <h2>@Model["order"].Product</h2>
 
-    <a href='/orders/new'>Add another product</a>
-    <a href='/orders'>View all orders</a>
+    <a href='/vendors/@Model["vendor"].Id/orders/new'>Add another product</a>
+    <a href='/vendors/@Model["vendor"].Id/orders/'>View all orders</a>
