Finally fix bug

--- a/PierresVendorsAndOrders/Views/Orders/Show.cshtml
+++ b/PierresVendorsAndOrders/Views/Orders/Show.cshtml
@@ -2,11 +2,11 @@
   Layout = "_Layout";
 }
 
-@using PierresVendorsAndOrders;
+@using PierresVendorsAndOrders.Models;
 
     <h1>Vendor Order Details: </h1>
 
     <h2>@Model["order"].Product</h2>
 
     <a href='/vendors/@Model["vendor"].Id/orders/new'>Add another product</a>
-    <a href='/vendors/@Model["vendor"].Id/orders/'>View all orders</a>
+    <a href='/vendors/@Model["vendor"].Id/'>View all orders</a>
