Delete Index.cshtml from Orders + web design

--- a/PierresVendorsAndOrders/Views/Home/Index.cshtml
+++ b/PierresVendorsAndOrders/Views/Home/Index.cshtml
@@ -2,7 +2,9 @@
   Layout = "_Layout";
 }
 
+    <div class="links">
     <h1>Pierre's Vendors And Orders</h1>
     <a href='/vendors'>View Vendors</a>
     <br>
     <a href='/vendors/new'>Add a new Vendor</a>
+    </div>
