--- a/PierresVendorsAndOrders/Views/Home/Index.cshtml
+++ b/PierresVendorsAndOrders/Views/Home/Index.cshtml
@@ -4,7 +4,6 @@
 
 <div class="links">
 <h1>Pierre's Vendors And Orders</h1>
-  <a href='/vendors'>View Vendors</a>
-  <br>
-  <a href='/vendors/new'>Add a new Vendor</a>
+  <a href='/vendors'>View Vendors </a> 
+  <a href='/vendors/new'>| Add Vendor</a>
 </div>
