--- a/PierresVendorsAndOrders/Views/Orders/New.cshtml
+++ b/PierresVendorsAndOrders/Views/Orders/New.cshtml
@@ -3,12 +3,13 @@
 }
 
 <div class="links">
-<h1>Add a new order to @Model.Name</h1>
+<h1>@Model.Name Order</h1>
   <form action="/vendors/@Model.Id/orders" method="post">
     <input id="vendorId" name="vendorId" type="hidden" value="@Model.Id"
     <label for="productName">Product Name</label>
     <br />
     <input id="productName" name="productName" type="text">
+    <br />
     <br />
     <button type="submit">Add Order</button>
   </form>
