Meticulously position div

--- a/PierresVendorsAndOrders/Views/Orders/Show.cshtml
+++ b/PierresVendorsAndOrders/Views/Orders/Show.cshtml
@@ -8,9 +8,9 @@
 
   <h1>Vendor Order Details: </h1>
 
-  <h2>@Model["order"].Product</h2>
+  <h2>@Model["order"].Product | ID #@Model["order"].Id</h2>
 
   <a href='/vendors/@Model["vendor"].Id/orders/new'>Add another product</a>
   <a href='/vendors/@Model["vendor"].Id/'>View all orders</a>
-  
+
 </div>
