Add img directory and bakery.jpg

--- a/PierresVendorsAndOrders/wwwroot/css/styles.css
+++ b/PierresVendorsAndOrders/wwwroot/css/styles.css
@@ -2,6 +2,13 @@ html {
   text-align: center;
 }
 
+body {
+  background-image: url("../img/bakery.jpg");
+  background-size: cover;
+  background-repeat: no-repeat;
+
+}
+
 h1 {
   text-align: center;
 }
