--- a/PierresVendorsAndOrders/wwwroot/css/styles.css
+++ b/PierresVendorsAndOrders/wwwroot/css/styles.css
@@ -3,10 +3,12 @@ html {
 }
 
 body {
+  color: white;
   background-image: url("../img/bakery.jpg");
   background-size: cover;
   background-repeat: no-repeat;
-
+  height: 100vh;
+  margin: auto;
 }
 
 h1 {
@@ -19,6 +21,8 @@ h1 {
   margin-top: 75px;
   padding-top: 10px;
   padding-bottom: 25px;
+  padding-left: 10px;
+  padding-right: 10px;
   width: 500px;
   background-color: rgba(0, 0, 0, 0.608);
   border-radius: 25px;
