Render Model properties

--- a/PierresVendorsAndOrders/Views/Orders/Show.cshtml
+++ b/PierresVendorsAndOrders/Views/Orders/Show.cshtml
@@ -6,11 +6,11 @@
 
 <div class="links">
 
-  <h1>Vendor Order Details: </h1>
+  <h1>@Model["vendor"].Name Order Details: </h1>
 
   <h2>@Model["order"].Product | ID #@Model["order"].Id</h2>
 
-  <a href='/vendors/@Model["vendor"].Id/orders/new'>Add another product</a>
+  <a href='/vendors/@Model["vendor"].Id/orders/new'>Add another product | </a>
   <a href='/vendors/@Model["vendor"].Id/'>View all orders</a>
 
 </div>
