--- a/PierresVendorsAndOrders/Views/Orders/New.cshtml
+++ b/PierresVendorsAndOrders/Views/Orders/New.cshtml
@@ -11,6 +11,6 @@
     <input id="productName" name="productName" type="text">
     <br />
     <br />
-    <button type="submit">Add Order</button>
+    <button type="submit" class="btn btn-success">Add Order</button>
   </form>
 </div>
