--- a/PierresVendorsAndOrders/wwwroot/css/styles.css
+++ b/PierresVendorsAndOrders/wwwroot/css/styles.css
@@ -25,8 +25,9 @@ h1 {
   padding-left: 10px;
   padding-right: 10px;
   width: 500px;
-  background-color: rgba(0, 0, 0, 0.608);
+  background-color: rgba(0, 0, 0, 0.75);
   border-radius: 25px;
+  font-size: 1.2em;
 }
 
 h3 {
