--- a/PierresVendorsAndOrders/Views/Home/Index.cshtml
+++ b/PierresVendorsAndOrders/Views/Home/Index.cshtml
@@ -3,7 +3,15 @@
 }
 
 <div class="links">
-<h1>Pierre's Vendors And Orders</h1>
+  <br />
+  <br />
+  <h1>Welcome back, Pierre!</h1>
+  <br />
+  <h2>Your Vendors and Orders Portal:</h2>
+  <h3></h3>
+  <br />
   <a href='/vendors'>View Vendors </a> 
-  <a href='/vendors/new'>| Add Vendor</a>
+  <a href='/vendors/new'>| Add New Vendor</a>
+  <br />
+  <br />
 </div>
