Add :bread: + :baguette_bread:

--- a/PierresVendorsAndOrders/Views/Home/Index.cshtml
+++ b/PierresVendorsAndOrders/Views/Home/Index.cshtml
@@ -5,7 +5,7 @@
 <div class="links">
   <br />
   <br />
-  <h1>Welcome back, Pierre!</h1>
+  <h1>Welcome back, Pierre! &#127838; &#129366;</h1>
   <br />
   <h2>Your Vendors and Orders Portal:</h2>
   <h3></h3>
