Orders Views :white_check_mark:

--- a/PierresVendorsAndOrders/Views/Orders/New.cshtml
+++ b/PierresVendorsAndOrders/Views/Orders/New.cshtml
@@ -9,6 +9,12 @@
     <label for="productName">Product Name</label>
     <br />
     <input id="productName" name="productName" type="text">
+    <label for="productDescription">Product Description</label>
+    <input id="productDescription" name="productDescription" type="text">
+    <label for="productPrice">Price</label>
+    <input id="productPrice" name="productPrice" type="number">
+    <label for="orderDate">Date</label>
+    <input id="orderDate" name="orderDate" type="date">
     <br />
     <br />
     <button type="submit" class="btn btn-success">Add Order</button>
