Finalize form structure for New Orders View

--- a/PierresVendorsAndOrders/Views/Orders/Show.cshtml
+++ b/PierresVendorsAndOrders/Views/Orders/Show.cshtml
@@ -6,7 +6,9 @@
 
 <div class="links">
 
-  <h1>@Model["vendor"].Name Order Details: </h1>
+  <h1>@Model["vendor"].Name</h1>
+  <br />
+  <h2>Order Details:</h2>
   <br />
   <h3>Product:</h3>
   <h5>@Model["order"].Product</h5>
