--- a/PierresVendorsAndOrders/Views/Orders/New.cshtml
+++ b/PierresVendorsAndOrders/Views/Orders/New.cshtml
@@ -6,14 +6,20 @@
 <h1>@Model.Name Order</h1>
   <form action="/vendors/@Model.Id/orders" method="post">
     <input id="vendorId" name="vendorId" type="hidden" value="@Model.Id"
-    <label for="productName">Product Name</label>
+    <label for="productName">Product</label>
     <br />
     <input id="productName" name="productName" type="text">
-    <label for="productDescription">Product Description</label>
-    <input id="productDescription" name="productDescription" type="text">
+    <br />
+    <label for="productDescription">Description</label>
+    <br />
+    <input style="height: 75px; word-wrap: break-word;" id="productDescription" name="productDescription" type="text">
+    <br />
     <label for="productPrice">Price</label>
-    <input id="productPrice" name="productPrice" type="number">
+    <br />
+    <input id="productPrice" name="productPrice" type="number" step="0.01" min="0">
+    <br />
     <label for="orderDate">Date</label>
+    <br />
     <input id="orderDate" name="orderDate" type="date">
     <br />
     <br />
